@@ -1,8 +1,12 @@
-lilv (0.21.1) unstable;
+lilv (0.21.3) unstable;
 
   * Fix loading files with spaces in their path
   * Add lilv_file_uri_parse() for correct URI to path conversion
+  * Add lilv_node_get_path() for convenient file URI path access
   * Add lilv_state_emit_port_values() for special port value handling
+  * Add lilv_state_get_uri()
+  * Add lilv_state_delete() for deleting user saved presets
+  * Fix creation of duplicate manifest entries when saving state
   * Expose lilv_world_load_specifications() and
     lilv_world_load_plugin_classes()
   * Tolerate passing NULL to lilv_state_restore()
@@ -12,7 +16,7 @@ lilv (0.21.1) unstable;
   * Windows fixes (thanks John Emmas)
   * Minor documentation improvements
 
- -- David Robillard <d@drobilla.net>  Thu, 19 Feb 2015 02:35:18 -0500
+ -- David Robillard <d@drobilla.net>  Sat, 07 Mar 2015 03:31:04 -0500
 
 lilv (0.20.0) stable;
 
